css/styles.css
/* For WordPress */
.widget {
    border: none !important;
}
:root {
    --sat: env(safe-area-inset-top);
    --sar: env(safe-area-inset-right);
    --sab: env(safe-area-inset-bottom);
    --sal: env(safe-area-inset-left);
}
.disabled {
    pointer-events: none !important;
}

#page {
    opacity: 1;
    transition: opacity 1s ease-in-out;
    -webkit-transition: opacity 1s ease-in-out;
}

body.page-loading.ajax-loading #page {
    opacity: 0.5;
    /* transform: translate(-50px, 0); */
}
/* For glassnote */
.bg-safe-area-top {
	top: 0;
    left: 0;
	right: 0;
    height: 0;
    width: 100%;
    padding-top: env(safe-area-inset-top);
    position: fixed;
	background: rgba(0,0,0,.66);
}

.bg-div-cust {
    top: 0;
    left: 0;
    height: 100vh;
    width: 100%;
    position: fixed;
    background: #aaaaaa url(assets/bg1.jpg) repeat scroll top center;
    background-size: cover;
    background-repeat: no-repeat;
    background-color: transparent;
}

.bg-div {
    display: block;
    background: #aaaaaa url(/assets/bg1.jpg) repeat scroll top center;
    background-size: cover;
    background-repeat: no-repeat;
    background-color: transparent;
    background-attachment: scroll !important;
}

body.user-bg .bg-div,
.bg-div-cust {
    display: none;
}

body.user-bg .bg-div-cust {
    display: block;
}

#change-bg-button {
    display: inline;
}

body.user-bg #change-bg-button,
#remove-bg-button {
    display: none;
}

body.user-bg #remove-bg-button {
    display: inline;
}

.toolbar {
    /* background: #dddc;
    padding: 0 0 1em 0;
    border-radius: 10px; */
    /* padding: 5px 5px 15px 0; */
    display: table;
    box-sizing: border-box;
    pointer-events: none;
    transition: background .5s ease-in-out;
    position: relative;
    width: 100%;
    top: -40px;
}

.toolbar .expanded-menu {
    width: 0;
    overflow: hidden;
    display: table;
    /* display: none; */
    opacity: 0;
    padding: 15px 0;
    transform: translate(-500px, 0px);
    transition: transform .2s ease-in-out, opacity .2s ease-in-out, background .2s ease-in-out;
    background: rgba(240, 240, 240, 0.9);
    box-shadow: 1px 1px 25px -10px rgba(0, 0, 0, 0.66);
    border-radius: 10px;
    vertical-align: top;
    pointer-events: none;
    margin: 0;
    width: 100%;
}

.toolbar .expanded-menu-container {
    padding: 15px;
    margin: -15px;
    overflow: hidden;
}

.toolbar .expanded-menu-items {
    display: table-cell;
    width: 100%;
}

.toolbar-overlay {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: none;
    z-index: -1;
    pointer-events: none;
}

body.expanded-menu .toolbar {
    /* background: rgba(240, 240, 240, 0.9); */
    border-radius: 10px;
    /* box-shadow: 1px 1px 25px -10px rgba(0, 0, 0, 0.66); */
    pointer-events: all;
}

body.expanded-menu .toolbar .expanded-menu {
    opacity: 1;
    transform: none;
    pointer-events: all;
}

body.expanded-menu .toolbar-overlay {
    display: block;
    pointer-events: all;
}

.hamburger-button {
    display: table-cell;
    width: 24px;
    height: 24px;
    border: none;
    background: none;
    margin: 8px;
    padding: 0;
    pointer-events: all;
    cursor: pointer;
    vertical-align: top;
    position: absolute;
    float: left;
}

body.expanded-menu .hamburger-button {
    display: none;
}

.toolbar .expanded-menu .hamburger-button {
    position: relative;
    display: table-cell;
    margin-top: -7px;
}

.toolbar .pill-button,
.toolbar a.pill-button {
    color: #3aacc3 !important;
    text-shadow: none;
    background: none;
    border-color: #202020;
    box-shadow: none;
    /* font-weight: 500; */
    text-transform: none;
    font-size: 13px;
    margin: 6px 2px;
}

/* body.expanded-menu .expanded-menu-items {
    width: 100%;
} */

.font-size-button {
    display: none;
}

body.f12px .font-size-button:first-child, body.f13px .font-size-button:first-child,
body.f14px .font-size-button:nth-child(2),
body.f15px .font-size-button:nth-child(3),
body.f16px .font-size-button:nth-child(4),
body.f17px .font-size-button:nth-child(5), body.f18px .font-size-button:nth-child(5) {
    display: inline;
}

.opacity-button {
    display: none;
}

body.opacity-0 .opacity-button:first-child,
body.opacity-10 .opacity-button:nth-child(2),
body.opacity-20 .opacity-button:nth-child(3),
body.opacity-30 .opacity-button:nth-child(4) {
    display: inline;
}

.dark-mode-button-toolbar,
body.dark-mode .dark-mode-button-toolbar:last-child {
    display: none;
}
.dark-mode-button-toolbar:last-child,
body.dark-mode .dark-mode-button-toolbar:first-child {
    display: inline;
}

/* .dark_mode_overlay {
    display: none;
} */
#editor-body {
    color: #202020 !important;
}
body.dark-mode #editor-body {
    color: #fefdf3 !important;
}
body.dark-mode .toolbar .expanded-menu {
    background: rgba(71, 71, 71, 0.9);
    color: #fefdf3;
}
body.dark-mode .toolbar .pill-button {
    border-color: #fefdf3;
}
/* body.dark-mode h1, body.dark-mode h2, body.dark-mode h3, 
body.dark-mode h4, body.dark-mode h5, body.dark-mode h6,
body.dark-mode tbc, body.dark-mode cite, body.dark-mode cm   {
    color: #3aaac3;
} */

body.opacity-0 .post-outer-container {
    background: rgba(254, 254, 253, 1) !important;
}

body.opacity-10 .post-outer-container {
    background: rgba(254, 254, 253, .9) !important;
}

body.opacity-20 .post-outer-container {
    background: rgba(254, 254, 253, .8) !important;
}

body.opacity-30 .post-outer-container {
    background: rgba(254, 254, 253, .7) !important;
}

body.opacity-0.dark-mode .post-outer-container {
    background: rgba(20, 20, 20, 1) !important;
}

body.opacity-10.dark-mode .post-outer-container {
    background: rgba(20, 20, 20, .9) !important;
}

body.opacity-20.dark-mode .post-outer-container {
    background: rgba(20, 20, 20, .8) !important;
}

body.opacity-30.dark-mode .post-outer-container {
    background: rgba(20, 20, 20, .7) !important;
}
/* ... */

